--- a/maven/meteocal/meteocal-web/src/main/webapp/Components/TopBar.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/Components/TopBar.xhtml
@@ -1,43 +1,43 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE html>
 <ui:composition  xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:f="http://java.sun.com/jsf/core"
-      xmlns:h="http://xmlns.jcp.org/jsf/html"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
-      xmlns:p="http://primefaces.org/ui">
+                 xmlns:f="http://java.sun.com/jsf/core"
+                 xmlns:h="http://xmlns.jcp.org/jsf/html"
+                 xmlns:ui="http://java.sun.com/jsf/facelets"
+                 xmlns:p="http://primefaces.org/ui">
     <h:head>
         <title></title>
     </h:head>
-        <h:form>  
-            
-            <p:menubar>
-                <p:menuitem value="home" url="/protected/personal/HomeCalendarMonth.xhtml" />
-                <p:menuitem value="#{topbarBean.username}" url="#" />
-                
-                <f:facet name="options">
-                    <p:inputText style="margin-right:20px" placeholder="Search"
-                                 requiredMessage="Please enter your username." id="searchText">
-                        <f:validateLength />
-                    </p:inputText>
-                </f:facet>
-                
-                <p:menuitem value="Notification" url="/protected/personal/ManageNotifications.xhtml"/>
-                <p:menuitem value="NotificationNumber" url="#"/>
-                <p:menuitem value="Invitation" url="/protected/personal/ManageInvitations.xhtml"/>
-                <p:menuitem value="InvitationNumber" url="#"/>
-                
-                <p:submenu label="Events" >
-                    <p:menuitem value="Create" url="/protected/event/EventCreate.xhtml"  />
-                    <p:menuitem value="Manage" url="/protected/personal/ManageEvents.xhtml" />
-                </p:submenu>                
-                <p:submenu label="Account" >
-                    <p:menuitem value="Settings" url="/protected/personal/Settings.xhtml"  />
-                    <p:menuitem value="Logout" actionListener="#{loginBean.logout()}" ajax="false" />
-                </p:submenu>
+    <h:form>  
 
-            </p:menubar>
-                
-        </h:form>
-            
+        <p:menubar>
+            <p:menuitem value="Home" url="/protected/personal/HomeCalendarMonth.xhtml" />
+            <p:menuitem value="#{topbarBean.username}" url="#" />
+
+            <f:facet name="options">
+                <p:inputText style="margin-right:20px" placeholder="Search"
+                             requiredMessage="Please enter your username." id="searchText">
+                    <f:validateLength />
+                </p:inputText>
+            </f:facet>
+
+            <p:menuitem value="Notification" url="/protected/personal/ManageNotifications.xhtml"/>
+            <p:menuitem value="NotificationNumber" url="#"/>
+            <p:menuitem value="Invitation" url="/protected/personal/ManageInvitations.xhtml"/>
+            <p:menuitem value="InvitationNumber" url="#"/>
+
+            <p:submenu label="Events" >
+                <p:menuitem value="Create" url="/protected/event/EventCreate.xhtml"  />
+                <p:menuitem value="Manage" url="/protected/personal/ManageEvents.xhtml" />
+            </p:submenu>                
+            <p:submenu label="Account" >
+                <p:menuitem value="Settings" url="/protected/personal/Settings.xhtml"  />                
+                <p:menuitem value="Logout" actionListener="#{loginBean.logout()}" ajax="false"/>
+            </p:submenu>
+
+        </p:menubar>
+
+    </h:form>
+
 
 </ui:composition>
