problem:         events = um.getLoggedUser().getCreatedAndParticipatingTo();

--- a/maven/meteocal/meteocal-web/src/main/webapp/Components/TopBar.xhtml
+++ b/maven/meteocal/meteocal-web/src/main/webapp/Components/TopBar.xhtml
@@ -30,7 +30,7 @@
             </p:submenu>                
             <p:submenu label="Account" >
                 <p:menuitem value="Settings" url="/protected/personal/Settings.xhtml" icon="ui-icon-gear" />                
-                <p:menuitem value="Logout" actionListener="#{loginBean.logout()}" ajax="false" icon="ui-icon-power"/>
+                <p:menuitem value="Logout" action="#{loginBean.logout()}" ajax="false" icon="ui-icon-power"/>
             </p:submenu>
 
         </p:menubar>
